# quant-stock

./: .dockerignore  .env.example  .gitignore  BACKTEST_QUICKSTART.md  Makefile  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TREE.txt  VNSTOCK_INTEGRATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/docs/: backtesting.md  corporate-actions.md  dashboard.md  factor-research.md  init-mvp.md  planner.md  prompt-init.md  sentiment-analysis.md  technical-analysis.md
backtest_results/: buy_hold_20251126.json  buy_hold_20251127.json  ma_20251126.json  ma_20251127.json  mean_reversion_20251126.json  mean_reversion_20251127.json  momentum_20251126.json  momentum_20251127.json
config/: config.yaml
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: ARCHITECTURE.md  BACKTEST_COMPLETE_GUIDE.md  BACKTEST_GUIDE.md  BACKTEST_UPGRADES.md  README.md  SCREENING_IMPROVEMENTS.md  STOCK_SCREENING_GUIDE.md
docs/guides/: HUONG_DAN_QUANT_TRADING.md  QUICKSTART.md  SETUP.md
docs/phases/: PHASE2.md  PHASE3.md  PHASE4.md
examples/: README.md  custom_strategy_example.py
scripts/: backfill_data.py  calculate_financial_ratios.py  init_db.py  load_stock_list.py  phase2_demo.py  phase3_demo.py  phase4_demo.py  run_backtest.py  screen_stocks.py
src/: __init__.py
src/api/: main.py
src/api/routes/: factors.py  health.py  screening.py
src/core/analytics/: __init__.py  performance.py
src/core/backtesting/: __init__.py  engine.py  strategies.py
src/core/corporate_actions/: __init__.py  adjuster.py  detector.py
src/core/data_ingestion/: data_client_factory.py  dnse_client.py  ssi_client.py  vnstock_client.py
src/core/factors/: fundamental.py  momentum.py  technical.py
src/core/market_index/: __init__.py  tracker.py
src/core/ml/: __init__.py  predictor.py
src/database/: __init__.py  connection.py  models.py
src/utils/: __init__.py  config.py  helpers.py  logger.py  validators.py
(+20 files in other folders)
